bindings/c/include/proven.h

/* ============================================================================
 * Status Codes
 * ============================================================================ */

/**
 * @brief Status codes returned by Proven operations.
 *
 * Zero indicates success; negative values indicate specific error conditions.
 */
typedef enum {
    PROVEN_OK                      =   0,
    PROVEN_ERR_NULL_POINTER        =  -1,
    PROVEN_ERR_INVALID_ARGUMENT    =  -2,
    PROVEN_ERR_OVERFLOW            =  -3,
    PROVEN_ERR_UNDERFLOW           =  -4,
    PROVEN_ERR_DIVISION_BY_ZERO    =  -5,
    PROVEN_ERR_PARSE_FAILURE       =  -6,
    PROVEN_ERR_VALIDATION_FAILED   =  -7,
    PROVEN_ERR_OUT_OF_BOUNDS       =  -8,
    PROVEN_ERR_ENCODING_ERROR      =  -9,
    PROVEN_ERR_ALLOCATION_FAILED   = -10,
    PROVEN_ERR_NOT_IMPLEMENTED     = -99
} ProvenStatus;
/* ============================================================================
 * Core Result Types
 * ============================================================================ */

/** @brief Result for integer operations */
typedef struct { int32_t status; int64_t value; } ProvenIntResult;
/* ============================================================================
 * Memory Management (1 function)
 * ============================================================================ */

/**
 * @brief Free a string allocated by Proven functions.
 * @param ptr String to free (may be NULL).
 */
void proven_free_string(char* ptr);
/* ============================================================================
 * Lifecycle (3 functions)
 * ============================================================================ */

/**
 * @brief Initialize the Proven runtime (includes Idris 2 runtime).
 * @return PROVEN_OK on success, error code otherwise.
 *
 * Must be called before any other Proven function. Safe to call multiple times.
 */
int32_t proven_init(void);
/**
 * @brief Cleanup the Proven runtime.
 *
 * Call when done using Proven functions. All allocated resources should be
 * freed before calling this.
 */
void proven_deinit(void);
/**
 * @brief Check if the runtime is initialized.
 * @return true if initialized.
 */
bool proven_is_initialized(void);
/* ============================================================================
 * Version Information (4 functions)
 * ============================================================================ */

/** @brief Get FFI ABI version for compatibility checking. */
uint32_t proven_ffi_abi_version(void);
/* ============================================================================
 * SafeMath - Arithmetic that cannot crash (9 functions)
 * ============================================================================ */

/**
 * @brief Safe integer division.
 * @param numerator Dividend.
 * @param denominator Divisor.
 * @return Result with quotient; PROVEN_ERR_DIVISION_BY_ZERO if denominator is 0,
 *         PROVEN_ERR_OVERFLOW for INT64_MIN / -1.
 */
ProvenIntResult proven_math_div(int64_t numerator, int64_t denominator);
/**
 * @brief Safe modulo operation.
 * @return Result with remainder; PROVEN_ERR_DIVISION_BY_ZERO if denominator is 0.
 */
ProvenIntResult proven_math_mod(int64_t numerator, int64_t denominator);
/**
 * @brief Checked addition with overflow detection.
 * @return PROVEN_ERR_OVERFLOW if result would overflow int64_t.
 */
ProvenIntResult proven_math_add_checked(int64_t a, int64_t b);
/**
 * @brief Checked subtraction with underflow detection.
 * @return PROVEN_ERR_UNDERFLOW if result would underflow int64_t.
 */
ProvenIntResult proven_math_sub_checked(int64_t a, int64_t b);
/**
 * @brief Checked multiplication with overflow detection.
 * @return PROVEN_ERR_OVERFLOW if result would overflow int64_t.
 */
ProvenIntResult proven_math_mul_checked(int64_t a, int64_t b);
/* ============================================================================
 * SafeUrl - URL parsing and validation (2 functions)
 * ============================================================================ */

/** @brief URL components structure returned by proven_url_parse(). */
typedef struct {
    char*    scheme;       size_t scheme_len;
    char*    host;         size_t host_len;
    uint16_t port;         bool   has_port;
    char*    path;         size_t path_len;
    char*    query;        size_t query_len;
    char*    fragment;     size_t fragment_len;
} ProvenUrlComponents;
/**
 * @brief Free URL components allocated by proven_url_parse().
 * @param components Pointer to URL components to free.
 */
void proven_url_free(ProvenUrlComponents* components);
/* ============================================================================
 * SafeJson - JSON validation and type detection (2 functions)
 * ============================================================================ */

/** @brief JSON value type. */
typedef enum {
    PROVEN_JSON_NULL    =  0,
    PROVEN_JSON_BOOL    =  1,
    PROVEN_JSON_NUMBER  =  2,
    PROVEN_JSON_STRING  =  3,
    PROVEN_JSON_ARRAY   =  4,
    PROVEN_JSON_OBJECT  =  5,
    PROVEN_JSON_INVALID = -1
} ProvenJsonType;
/* ============================================================================
 * SafeVersion - Semantic versioning (3 functions)
 * ============================================================================ */

/** @brief Semantic version structure. */
typedef struct {
    uint32_t major;
    uint32_t minor;
    uint32_t patch;
    size_t   prerelease_len;
    char*    prerelease;  /**< Pre-release string (may be NULL) */
} ProvenSemanticVersion;
/**
 * @brief Free version result resources (prerelease string).
 */
void proven_version_free(ProvenSemanticVersion* version);