bindings/c/include/safe_currency.h

/* ============================================================================
 * Status Codes
 * ============================================================================ */

/**
 * @brief Status codes for currency operations
 */
typedef enum CurrencyStatus {
    CURRENCY_OK = 0,
    CURRENCY_ERR_NULL_POINTER = -1,
    CURRENCY_ERR_INVALID_CODE = -2,
    CURRENCY_ERR_CURRENCY_MISMATCH = -3,
    CURRENCY_ERR_OVERFLOW = -4,
    CURRENCY_ERR_UNDERFLOW = -5,
    CURRENCY_ERR_DIVISION_BY_ZERO = -6,
    CURRENCY_ERR_BUFFER_TOO_SMALL = -7,
    CURRENCY_ERR_PARSE_FAILED = -8
} CurrencyStatus;