bindings/ada/src/proven-ffi.ads

--  SPDX-License-Identifier: MPL-2.0
--  (PMPL-1.0-or-later preferred; MPL-2.0 required for GNAT ecosystem)
--  Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <jonathan.jewell@open.ac.uk>

--  Proven.FFI: Low-level C ABI declarations for libproven.
--
--  This package mirrors the C types and function signatures from
--  bindings/c/include/proven.h and the per-module headers. All types use
--  pragma Convention(C, ...) and all functions use pragma Import(C, ...).
--
--  Users should prefer the high-level Safe_* packages over calling
--  these FFI primitives directly.

with Interfaces.C;         use Interfaces.C;
with Interfaces.C.Strings; use Interfaces.C.Strings;

package Proven.FFI is

   ---------------------------------------------------------------------------
   --  Status Codes (mirrors ProvenStatus)
   ---------------------------------------------------------------------------

   PROVEN_OK                    : constant int := 0;
   PROVEN_ERR_NULL_POINTER      : constant int := -1;
   PROVEN_ERR_INVALID_ARGUMENT  : constant int := -2;
   PROVEN_ERR_OVERFLOW          : constant int := -3;
   PROVEN_ERR_UNDERFLOW         : constant int := -4;
   PROVEN_ERR_DIVISION_BY_ZERO  : constant int := -5;
   PROVEN_ERR_PARSE_FAILURE     : constant int := -6;
   PROVEN_ERR_VALIDATION_FAILED : constant int := -7;
   PROVEN_ERR_OUT_OF_BOUNDS     : constant int := -8;
   PROVEN_ERR_ENCODING_ERROR    : constant int := -9;
   PROVEN_ERR_ALLOCATION_FAILED : constant int := -10;
   PROVEN_ERR_NOT_IMPLEMENTED   : constant int := -99;

   ---------------------------------------------------------------------------
   --  Core Result Types
   ---------------------------------------------------------------------------

   type Int_Result is record
      Status : int;
      Value  : long;
   end record;
   pragma Convention (C, Int_Result);

   type Bool_Result is record
      Status : int;
      Value  : C_bool;
   end record;
   pragma Convention (C, Bool_Result);

   type String_Result is record
      Status : int;
      Value  : chars_ptr;
      Length : size_t;
   end record;
   pragma Convention (C, String_Result);

   type Float_Result is record
      Status : int;
      Value  : double;
   end record;
   pragma Convention (C, Float_Result);

   ---------------------------------------------------------------------------
   --  Network Types
   ---------------------------------------------------------------------------

   type IPv4_Octets is array (0 .. 3) of unsigned_char;
   pragma Convention (C, IPv4_Octets);

   type IPv4_Address is record
      Octets : IPv4_Octets;
   end record;
   pragma Convention (C, IPv4_Address);

   type IPv4_Result is record
      Status  : int;
      Address : IPv4_Address;
   end record;
   pragma Convention (C, IPv4_Result);

   ---------------------------------------------------------------------------
   --  URL Types
   ---------------------------------------------------------------------------

   type Url_Components is record
      Scheme       : chars_ptr;
      Scheme_Len   : size_t;
      Host         : chars_ptr;
      Host_Len     : size_t;
      Port         : unsigned_short;
      Has_Port     : C_bool;
      Path         : chars_ptr;
      Path_Len     : size_t;
      Query        : chars_ptr;
      Query_Len    : size_t;
      Fragment     : chars_ptr;
      Fragment_Len : size_t;
   end record;
   pragma Convention (C, Url_Components);

   type Url_Result is record
      Status     : int;
      Components : Url_Components;
   end record;
   pragma Convention (C, Url_Result);

   ---------------------------------------------------------------------------
   --  DateTime Types
   ---------------------------------------------------------------------------

   type C_DateTime is record
      Year              : int;
      Month             : unsigned_char;
      Day               : unsigned_char;
      Hour              : unsigned_char;
      Minute            : unsigned_char;
      Second            : unsigned_char;
      Nanosecond        : unsigned;
      Tz_Offset_Minutes : short;
   end record;
   pragma Convention (C, C_DateTime);

   type DateTime_Result is record
      Status   : int;
      Datetime : C_DateTime;
   end record;
   pragma Convention (C, DateTime_Result);

   ---------------------------------------------------------------------------
   --  Version Types
   ---------------------------------------------------------------------------

   type C_Semantic_Version is record
      Major          : unsigned;
      Minor          : unsigned;
      Patch          : unsigned;
      Prerelease_Len : size_t;
      Prerelease     : chars_ptr;
   end record;
   pragma Convention (C, C_Semantic_Version);

   type Version_Result is record
      Status  : int;
      Version : C_Semantic_Version;
   end record;
   pragma Convention (C, Version_Result);

   ---------------------------------------------------------------------------
   --  JSON Types
   ---------------------------------------------------------------------------

   PROVEN_JSON_NULL    : constant int := 0;
   PROVEN_JSON_BOOL    : constant int := 1;
   PROVEN_JSON_NUMBER  : constant int := 2;
   PROVEN_JSON_STRING  : constant int := 3;
   PROVEN_JSON_ARRAY   : constant int := 4;
   PROVEN_JSON_OBJECT  : constant int := 5;
   PROVEN_JSON_INVALID : constant int := -1;

   ---------------------------------------------------------------------------
   --  UUID Types
   ---------------------------------------------------------------------------

   type UUID_Bytes is array (0 .. 15) of unsigned_char;
   pragma Convention (C, UUID_Bytes);

   type C_Uuid is record
      Bytes : UUID_Bytes;
   end record;
   pragma Convention (C, C_Uuid);

   UUID_OK                 : constant int := 0;
   UUID_ERR_NULL_POINTER   : constant int := -1;
   UUID_ERR_INVALID_FORMAT : constant int := -2;
   UUID_ERR_INVALID_LENGTH : constant int := -3;
   UUID_ERR_INVALID_HEX   : constant int := -4;
   UUID_ERR_BUFFER_SMALL   : constant int := -5;
   UUID_ERR_RANDOM_FAILED  : constant int := -6;

   UUID_STRING_LEN : constant := 36;
   UUID_URN_LEN    : constant := 45;
   UUID_BYTES_LEN  : constant := 16;

   ---------------------------------------------------------------------------
   --  Hex Types
   ---------------------------------------------------------------------------

   HEX_OK                : constant int := 0;
   HEX_ERR_NULL_POINTER  : constant int := -1;
   HEX_ERR_INVALID_CHAR  : constant int := -2;
   HEX_ERR_ODD_LENGTH    : constant int := -3;
   HEX_ERR_BUFFER_SMALL  : constant int := -4;
   HEX_ERR_OVERFLOW      : constant int := -5;

   type Hex_Decode_Result is record
      Status        : int;
      Bytes_Written : size_t;
   end record;
   pragma Convention (C, Hex_Decode_Result);

   type Hex_Encode_Result is record
      Status        : int;
      Chars_Written : size_t;
   end record;
   pragma Convention (C, Hex_Encode_Result);

   type Hex_Int_Result is record
      Status : int;
      Value  : unsigned_long;
   end record;
   pragma Convention (C, Hex_Int_Result);

   ---------------------------------------------------------------------------
   --  Currency Types
   ---------------------------------------------------------------------------

   CURRENCY_OK                  : constant int := 0;
   CURRENCY_ERR_INVALID_CODE    : constant int := -2;
   CURRENCY_ERR_MISMATCH        : constant int := -3;
   CURRENCY_ERR_OVERFLOW        : constant int := -4;
   CURRENCY_ERR_DIV_BY_ZERO     : constant int := -6;
   CURRENCY_ERR_BUFFER_SMALL    : constant int := -7;

   type C_Money is record
      Minor_Units : long;
      Currency    : int;
   end record;
   pragma Convention (C, C_Money);

   type Money_Result is record
      Status : int;
      Value  : C_Money;
   end record;
   pragma Convention (C, Money_Result);

   type Currency_Code_Result is record
      Status : int;
      Code   : int;
   end record;
   pragma Convention (C, Currency_Code_Result);

   ---------------------------------------------------------------------------
   --  Phone Types
   ---------------------------------------------------------------------------

   PHONE_OK              : constant int := 0;
   PHONE_MAX_DIGITS      : constant := 15;
   PHONE_FORMAT_BUF_SIZE : constant := 32;

   type Phone_National_Buf is array (0 .. PHONE_MAX_DIGITS) of char;
   pragma Convention (C, Phone_National_Buf);

   type C_Phone_Number is record
      Country_Code        : int;
      National_Number     : Phone_National_Buf;
      National_Number_Len : unsigned_char;
   end record;
   pragma Convention (C, C_Phone_Number);

   type Phone_Result is record
      Status : int;
      Number : C_Phone_Number;
   end record;
   pragma Convention (C, Phone_Result);

   ---------------------------------------------------------------------------
   --  Digest Types
   ---------------------------------------------------------------------------

   type C_Digest is record
      Algorithm : unsigned_char;
      Value     : chars_ptr;
      Value_Len : size_t;
   end record;
   pragma Convention (C, C_Digest);

   type Digest_Result is record
      Status : int;
      Digest : C_Digest;
   end record;
   pragma Convention (C, Digest_Result);

   ---------------------------------------------------------------------------
   --  Registry Types
   ---------------------------------------------------------------------------

   type C_Image_Reference is record
      Registry       : chars_ptr;
      Registry_Len   : size_t;
      Repository     : chars_ptr;
      Repository_Len : size_t;
      Tag            : chars_ptr;
      Tag_Len        : size_t;
      Digest         : chars_ptr;
      Digest_Len     : size_t;
   end record;
   pragma Convention (C, C_Image_Reference);

   type Image_Ref_Result is record
      Status    : int;
      Reference : C_Image_Reference;
   end record;
   pragma Convention (C, Image_Ref_Result);

   ---------------------------------------------------------------------------
   --  Runtime Management
   ---------------------------------------------------------------------------

   function Proven_Init return int;
   pragma Import (C, Proven_Init, "proven_init");

   procedure Proven_Deinit;
   pragma Import (C, Proven_Deinit, "proven_deinit");

   function Proven_Is_Initialized return C_bool;
   pragma Import (C, Proven_Is_Initialized, "proven_is_initialized");

   function Proven_FFI_ABI_Version return unsigned;
   pragma Import (C, Proven_FFI_ABI_Version, "proven_ffi_abi_version");

   ---------------------------------------------------------------------------
   --  Memory Management
   ---------------------------------------------------------------------------

   procedure Proven_Free_String (Ptr : chars_ptr);
   pragma Import (C, Proven_Free_String, "proven_free_string");

   procedure Proven_Url_Free (Components : access Url_Components);
   pragma Import (C, Proven_Url_Free, "proven_url_free");

   procedure Proven_Version_Free (Version : access C_Semantic_Version);
   pragma Import (C, Proven_Version_Free, "proven_version_free");

   ---------------------------------------------------------------------------
   --  SafeMath
   ---------------------------------------------------------------------------

   function Math_Div (Numerator, Denominator : long) return Int_Result;
   pragma Import (C, Math_Div, "proven_math_div");

   function Math_Mod (Numerator, Denominator : long) return Int_Result;
   pragma Import (C, Math_Mod, "proven_math_mod");

   function Math_Add_Checked (A, B : long) return Int_Result;
   pragma Import (C, Math_Add_Checked, "proven_math_add_checked");

   function Math_Sub_Checked (A, B : long) return Int_Result;
   pragma Import (C, Math_Sub_Checked, "proven_math_sub_checked");

   function Math_Mul_Checked (A, B : long) return Int_Result;
   pragma Import (C, Math_Mul_Checked, "proven_math_mul_checked");
